feat: CBT Import Engine v1 — LMSHub HTML spec, session-based import, 42-rule validation, ZIP archive, ExamBuilderService with bulk inserts